# rust-webrtc

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs  session.rs
client/src/tests/: mod.rs  session.rs  test_session.rs
web/: Cargo.toml  README.md  index.html
web/src/: lib.rs
