[package]
edition = "2021"
name = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
webrtc = "0.4.0"

tokio = {version = "1.15.0", features = ["full"]}
clap = "3.1.8"
logs = "0.5.0"
signal = "0.7.0"
serde_json = "1.0.79"
env_logger = "0.9.0"
chrono = "0.4.19"
log = "0.4.16"
base64 = "0.13.0"
